1.0.2:
Sam Lantinga - Tue Apr 10 20:17:01 PDT 2001
 * Fixed out of memory condition caused by not properly unmapping files

1.0.1:
Sam Lantinga - Tue Jan 16 19:02:06 PST 2001
 * Minor packaging changes for the first release